# rs-storm-parser

./: Cargo.toml  README.md
src/: bin.rs  lib.rs
src/storm_parser/: attributes.rs  binary_reader.rs  details.rs  events.rs  init.rs  mod.rs  primitives.rs  replay.rs  storm_parser.rs  tracker.rs
test-replays/: infernal-shrines-20171102.StormReplay
