[package]
name = "StormParser"
version = "0.1.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]

[lib]
name = "storm_parser"
path = "src/lib.rs"

[[bin]]
name = "storm-parser"
path = "src/bin.rs"

[dependencies]
backtrace = "0.3.3"
bitstream-io = { git = "https://github.com/nuclearfurnace/bitstream-io", branch = "master" }
#bitstream-io = { path = "../bitstream-io" }
byteorder = "1.1.0"
chrono = { version = "0.4.0", features = ["serde", "rustc-serialize"] }
derivative = "1.0.0"
lazysort = "0.1.1"
mpq = { git = "https://github.com/nuclearfurnace/mpq-rust", branch = "tobz/read-user-data" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
