[package]
name = "StormParser"
version = "0.1.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]

[profile.release]
lto = true

[lib]
name = "storm_parser"
path = "src/lib.rs"

[[bin]]
name = "storm-parser"
path = "src/bin.rs"

[dependencies]
backtrace = "0.3.3"
byteorder = "1.1.0"
chrono = { version = "0.4.0", features = ["serde", "rustc-serialize"] }
derivative = "1.0.0"
enum-primitive-derive = { path = "../enum-primitive-derive" }
hex-slice = "0.1.0"
lazysort = "0.1.1"
mpq = { git = "https://github.com/nuclearfurnace/mpq-rust", branch = "tobz/read-user-data" }
num-traits = "^0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
unicode-reverse = "1.0.4"
